--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ UserName</label>
                 
                 <div class="group">
                     <span><a href="#">Forget-password &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></span>
-                    <span><a href="#">login</a></span>
+                    <span><a href="login.html">login</a></span>
                 <br>
                 </div>
                 <br>
@@ -95,9 +95,6 @@ UserName</label>
 
       <br> <br>
         </main>
-
-        <div class="sidebar left">  </div>
-        <div class="sidebar right">  </div>
         <footer class="footer"> &lt; &copy; Mona Galal &gt; </footer>
 <script src="main.js"></script>
     </body>
