--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <br>   </section> 
            <br>
     <div class="container">
-        <div class="form-box">
+        <div class="form-box" action="/" method="post">
         
 
             <img class="image" src="okay.png" alt=""> 
