--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
         <title>registration form,
             By Mona Galal</title>
         <link rel="stylesheet" href="style.css">
-        <meta property="og:title" content="calculaters">
+        <meta property="og:title" content="registration form">
         <meta property="og:type" content="website">
          <meta property="og:url" content="">
         <meta property="og:discription" content="HTML, CSS, javaScrip">
         <meta property="og:local" content="en_us">
-        <meta property="og:site_name" content="calculaters">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="icon" href="okay.png">
+        <meta property="og:site_name" content="registration form">
+         <link rel="icon" href="okay.png">
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </head>
