--- a/login.html
+++ b/login.html
@@ -8,14 +8,12 @@
         <title>LogIn form,
             By Mona Galal</title>
         <link rel="stylesheet" href="style.css">
-        <meta property="og:title" content="calculaters">
-        <meta property="og:type" content="website">
+        <meta property="og:title" content="login">
+        <meta property="og:type" content="login">
          <meta property="og:url" content="">
         <meta property="og:discription" content="HTML, CSS, javaScrip">
         <meta property="og:local" content="en_us">
-        <meta property="og:site_name" content="calculaters">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <meta property="og:site_name" content="login">
         <link rel="icon" href="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y2FsY3VsYXRvcnxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60">
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
